syntax = "proto3";

package proto;

option java_package = "com.hederahashgraph.api.proto.java";
option java_multiple_files = true;

import "BasicTypes.proto";
import "Duration.proto";
import "Timestamp.proto";

// Current state of a topic.
message ConsensusTopicInfo {
    string memo = 1; // Short publicly visible memo about the topic. No guarantee of uniqueness.

    // SHA-384 running hash <previousRunningHash, topicId, consensusTimestamp, sequenceNumber, message>
    bytes runningHash = 2;

    // Sequence number (starting at 1 for the first submitMessage) of messages on the topic.
    uint64 sequenceNumber = 3;

    // Effective consensus timestamp at (and after) which submitMessage calls will no longer succeed on the topic
    // and the topic will expire and after AUTORENEW_GRACE_PERIOD be automatically deleted.
    Timestamp expirationTime = 4;

    Key adminKey = 5; // Access control for update/delete of the topic. Null if there is no key.
    Key submitKey = 6; // Access control for ConsensusService.submitMessage. Null if there is no key.

    Duration autoRenewPeriod = 7;
    AccountID autoRenewAccount = 8; // Null if there is no autoRenewAccount.
}
